# imgvault

./: .gitignore  .vercelignore  QUICKSTART.md  README.md  userinput.py
backend/: .env.example  go.mod
docs/: README.md  architecture.md  build-and-release.md  extension-workflows.md  known-gotchas.md  native-host-yt-dlp.md  project-overview.md  web-app-api.md
extension/: background.js  duplicate-detector.js  gallery.css  gallery.html  gallery.js  manifest.json  popup.css  popup.html  popup.js  settings.html  settings.js  storage.js
native-host/: .gitignore  README.md  index.html  package.json  postbuild.js
native-host/src-tauri/: Cargo.toml
native-host/src-tauri/icons/: README.md
native-host/src-tauri/src/: main.rs
nextgen-extension/: .env.example  .gitignore  README.md  add-columns.mjs  add-config-column.mjs  drizzle.config.ts  extension-id.html  fix-constraint.mjs  gallery.html  index.html  manifest.json  package.json  pnpm-lock.yaml  popup.html  postbuild.ps1  push-schema.mjs  rajce-fix.css  scene-server.mjs  scene-viewer.html  settings.html  slideshare-fix.css  tailwind.config.js  trash.html  verify-schema.mjs  vite-plugin-strip-exports.js  vite.config.js
old extension/: content.js  gallery.html  manifest.json  popup.html  popup.js  settings.html  storage.js
old-extension/: background.js  popup.css  settings.html  url-normalizer.js
shared/: mediaDbPayload.js  mediaFieldRegistry.js  mediaItemNormalizer.js
vanilla js extension/: gallery.js
web/: .env.example  .gitignore  drizzle.config.js  next.config.js  package.json  pnpm-lock.yaml  (+2 more)
(+104 files in other folders)
