[package]
name = "imgvault-native-host"
version = "0.1.0"
description = "ImgVault Native Messaging Host"
authors = ["ImgVault"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.52"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase", "minwindef", "winuser"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
